# durable-agentic-quantum

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/app/cmd/: mcp.py  site.py  worker.py
src/app/services/: llm_service.py  mcp_service.py  qiskit_service.py  temporal_service.py
src/app/site/: components.py
src/app/temporal/: activities.py  constants.py  models.py  workflow.py
src/test/: conftest.py
src/test/cmd/: test_mcp.py  test_site.py
src/test/service/: test_llm_service.py  test_mcp_service.py  test_qiskit_service.py  test_temporal_service.py
src/test/temporal/: test_workflow.py
